@@ -60,80 +60,57 @@ void marshall_PackageStructurePtr(Marshall *m) {
 		break;
 	}
 }
+*/
 
 void marshall_QHashQStringQVariant(Marshall *m) {
 	switch(m->action()) {
-	case Marshall::FromVALUE:
-	{
-		VALUE hash = *(m->var());
-		if (TYPE(hash) != T_HASH) {
-			m->item().s_voidp = 0;
-			break;
-	    }
-		
-		QHash<QString,QVariant> * map = new QHash<QString,QVariant>;
-		
-		// Convert the ruby hash to an array of key/value arrays
-		VALUE temp = rb_funcall(hash, rb_intern("to_a"), 0);
-
-		for (long i = 0; i < RARRAY(temp)->len; i++) {
-			VALUE key = rb_ary_entry(rb_ary_entry(temp, i), 0);
-			VALUE value = rb_ary_entry(rb_ary_entry(temp, i), 1);
-			
-			smokeruby_object *o = value_obj_info(value);
-			if (o == 0 || o->ptr == 0) {
-				continue;
+		case Marshall::FromObject: 
+		{
+			if (m->var().s_class == 0) {
+				m->item().s_class = 0;
+				return;
 			}
+			QHash<QString, QVariant>* map = (QHash<QString, QVariant>*) (*DictionaryToQHash)(m->var().s_voidp, 2);
+			m->item().s_voidp = (void*) map;
+			m->next();
 			
-			(*map)[QString(StringValuePtr(key))] = (QVariant)*(QVariant*)o->ptr;
-		}
-	    
-		m->item().s_voidp = map;
-		m->next();
-		
-	    if(m->cleanup())
-		delete map;
-	}
-	break;
-	case Marshall::ToVALUE:
-	{
-		QHash<QString,QVariant> *map = (QHash<QString,QVariant>*)m->item().s_voidp;
-		if (!map) {
-			*(m->var()) = Qnil;
+			if (m->cleanup()) {
+				delete map;
+			}
+			(*FreeGCHandle)(m->var().s_voidp);
 			break;
 		}
-		
-	    VALUE hv = rb_hash_new();
-			
-		QHash<QString,QVariant>::Iterator it;
-		for (it = map->begin(); it != map->end(); ++it) {
-			void *p = new QVariant(it.value());
-			VALUE obj = getPointerObject(p);
-				
-			if (obj == Qnil) {
-				smokeruby_object  * o = alloc_smokeruby_object(	true, 
-																m->smoke(), 
-																m->smoke()->idClass("QVariant").index, 
-																p );
-				obj = set_obj_info("Qt::Variant", o);
-			}
 
-			rb_hash_aset(hv, rb_str_new2(((QString*)&(it.key()))->toLatin1()), obj);
-        }
-		
-		*(m->var()) = hv;
-		m->next();
-		
-//		if(m->cleanup())
-//			delete map;
-	}
-	break;
-      default:
-	m->unsupported();
-	break;
+		case Marshall::ToObject: 
+		{
+			QHash<QString, QVariant>* map = (QHash<QString, QVariant>*) m->item().s_voidp;
+			void* dict = (*ConstructDictionary)("System.String", "Qyoto.QVariant");
+			
+			Smoke::ModuleIndex id = m->smoke()->findClass("QVariant");
+			
+			for (QHash<QString, QVariant>::iterator i = map->begin(); i != map->end(); ++i) {
+				void* v = (void*) &(i.value());
+				smokeqyoto_object * vo = alloc_smokeqyoto_object(false, id.smoke, id.index, v);
+				void* value = (*CreateInstance)("Qyoto.QVariant", vo);
+				void* string = (void*) StringFromQString((void*) &(i.key()));
+				(*AddObjectObjectToDictionary)(	dict,
+								string,
+								value);
+				(*FreeGCHandle)(string);
+				(*FreeGCHandle)(value);
+			}
+			
+			m->var().s_voidp = dict;
+			m->next();
+			
+			break;
+		}
+	
+		default:
+			m->unsupported();
+			break;
     }
 }
-*/
 
 DEF_LIST_MARSHALLER( PlasmaContainmentList, QList<Plasma::Containment*>, Plasma::Containment )
 DEF_LIST_MARSHALLER( PlasmaAppletList, QList<Plasma::Applet*>, Plasma::Applet )
@@ -144,10 +121,10 @@ DEF_LIST_MARSHALLER( PlasmaAppletList, QList<Plasma::Applet*>, Plasma::Applet )
 
 TypeHandler Plasma_handlers[] = {
 //    { "Plasma::PackageStructure::Ptr", marshall_PackageStructurePtr },
-//    { "QHash<QString,QVariant>", marshall_QHashQStringQVariant },
-//    { "QHash<QString,QVariant>&", marshall_QHashQStringQVariant },
-//    { "Plasma::DataEngine::Data", marshall_QHashQStringQVariant },
-//    { "Plasma::DataEngine::Data&", marshall_QHashQStringQVariant },
+    { "QHash<QString,QVariant>", marshall_QHashQStringQVariant },
+    { "QHash<QString,QVariant>&", marshall_QHashQStringQVariant },
+    { "Plasma::DataEngine::Data", marshall_QHashQStringQVariant },
+    { "Plasma::DataEngine::Data&", marshall_QHashQStringQVariant },
 //    { "Plasma::DataEngine::SourceDict", marshall_QHashQStringDataContainer },
 //    { "Plasma::DataEngine::Dict", marshall_QHashQStringDataEngine },
     { "QList<Plasma::Containment*>", marshall_PlasmaContainmentList },
